Custom text parameters (#1383)
* implement support for customTextParameters

* add tests for customTextParameters

* update log message

* remove old customTextParams in GenericFormDataValidator

* make logs more clear in translation service
